--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,13 @@ ul {
   color: #333;
 }
 
+/* Qua */
+#lua img {
+  width: 80%;
+  display: block;
+  margin: auto;
+  border-radius: 20px;
+}
 
 
 
